# src/docs/swagger.yml
@@ -430,55 +430,40 @@ paths:
         400:
           description: Bad request
 
-  /users/avatar:
-    put:
-      summary: Uploads a file.
-        consumes:
-         - multipart/form-data
-        parameters:
-         - in: formData
-           name: upfile
-           type: file
-           description: The file to upload.
-        tags:
-         - Users
+  /users/avatar/{id}:
+    post:
+      summary: Update user avatar
+      description: This method is used to update user avatar. You need to send access token in header and image in body.
+      tags:
+        - Users
+      consumes:
+        - multipart/form-data
+      parameters:
+        - name: id
+          in: path
+          description: User id
+          required: true
+          type: string
+
+        - name: avatar
+          in: formData
+          description: User avatar
+          required: true
+          type: file
+
+      security:
+        - JWT: []
+           
+
       responses:  
         200: 
           description: Success
-          schema:
-            type: object
-            properties:
-              id: 
-                type: integer
-              name:
-                type: string
-              surname:
-                type: string
-              email:
-                type: string
-              img: 
-                type: string
-              role:
-                type: string
-              position:
-                type: string
-              department:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  name:
-                    type: string
-                  description:
-                    type: string
-                  employees: 
-                  # Employess is array and includes users id
-                    type: array
-                    items:
-                      type: string
-
         400:
           description: Bad request
+        401:
+          description: Unauthorized
+        500:
+          description: Internal server error
 
   /users/downlaodCSV:
     get:
