# src/routes/usersRoute.js
@@ -1,7 +1,7 @@
 import express from 'express';
 import { getAllUsers, getUserById, updateUser, deleteUser, countUsers, changeDepartment, uploadAvatar, downloadCsv, updateUserRole  } from '../controllers/usersController.js';
 import AuthMiddleware from '../middlewares/AuthMiddleware.js';
-import { adminOrOwner, role } from '../middlewares/RoleMiddleware.js';
+import { adminOrOwner, onlyOwner, role } from '../middlewares/RoleMiddleware.js';
 import { cloudinaryUploader } from '../middlewares/CloudinaryMiddleware.js';
 
 const usersRouter = express.Router();
@@ -14,6 +14,6 @@ usersRouter.get('/:id', AuthMiddleware, adminOrOwner, getUserById )
 usersRouter.put('/:id/role', AuthMiddleware, role(['admin']), updateUserRole)
 usersRouter.put('/:id', AuthMiddleware, adminOrOwner, updateUser )
 usersRouter.delete('/:id', AuthMiddleware, role(['admin']), deleteUser )
-usersRouter.post('/uploadAvatar', AuthMiddleware, role(['user']), cloudinaryUploader, uploadAvatar )
+usersRouter.post('/avatar/:id', AuthMiddleware, adminOrOwner, cloudinaryUploader, uploadAvatar )
 
 export default usersRouter;
